syntax = "proto3";

import "google/protobuf/empty.proto";
import "Protos/EssentialData/Common.proto";


option csharp_namespace = "DawnQuant.AShare.Api.EssentialData";

package DawnQuant.AShare.Api.EssentialData;


//龙头股
service BellwetherApi {
  
//保存龙头股
  rpc SaveBellwethers(SaveBellwethersRequest) returns (google.protobuf.Empty);
 
}


message SaveBellwethersRequest
{
    repeated  BellwetherDto Entities=1;
}













